# i-can-read-anything

./: README.md  app.py  config.py  extensions.py  forms.py  pyproject.toml
.github/workflows/: build-and-deploy-app.yml  build-and-deploy-app.yml.disabled
app/: __init.py__  __init__.py  config.py  models.py
app/templates/: base.html  index.html
models/: translation.py  user.py
static/css/: main.css  styles.css
templates/: base.html  index.html  login.html  profile.html  register.html  translations.html
